refactor(StudylogOverviewDocumentation): mock 이용한 테스트로 수정